// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/common/Ico should render properly 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-xmark fa-sm"
    data-icon="xmark"
    data-prefix="fas"
    role="img"
    viewBox="0 0 384 512"
  >
    <path
      d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`components/common/Ico should support different sizes 1`] = `
<div>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-xmark fa-sm"
    data-icon="xmark"
    data-prefix="fas"
    role="img"
    viewBox="0 0 384 512"
  >
    <path
      d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`components/common/Ico should support different sizes 2`] = `
<div>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-xmark fa-lg"
    data-icon="xmark"
    data-prefix="fas"
    role="img"
    viewBox="0 0 384 512"
  >
    <path
      d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
      fill="currentColor"
    />
  </svg>
</div>
`;

exports[`components/common/Ico should support different sizes 3`] = `
<div>
  <svg
    aria-hidden="true"
    class="svg-inline--fa fa-xmark fa-xl"
    data-icon="xmark"
    data-prefix="fas"
    role="img"
    viewBox="0 0 384 512"
  >
    <path
      d="M55.1 73.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L147.2 256 9.9 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192.5 301.3 329.9 438.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.8 256 375.1 118.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192.5 210.7 55.1 73.4z"
      fill="currentColor"
    />
  </svg>
</div>
`;
